@@ -1,0 +1,1 @@
+DIST locale_switcher-3-fx.xpi 3145 RMD160 5d0ab0158b230da8ab083667a7cab4937d61e90d SHA1 47a657f030f13bcad7a3ea305e5150e34a6dd869 SHA256 a98f6871c1f644764976716a7edc8e9f5b8efec819aad70788a7bbbad5e38bc0
