@@ -7,7 +7,7 @@ inherit mv_mozextension
 RESTRICT="mirror"
 
 DESCRIPTION="Firefox plugin: button to clear URL"
-HOMEPAGE="http://addons.mozilla.org/de/firefox/addon/xclear/"
+HOMEPAGE="http://addons.mozilla.org/firefox/addon/xclear/"
 SRC_URI="http://releases.mozilla.org/pub/mozilla.org/addons/13078/${P}-sm+fx.xpi"
 
 LICENSE="GPL-2"
