@@ -1,0 +1,8 @@
+# ChangeLog for www-plugins/locale-switcher
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header $
+
+*locale-switcher-3 (02 Apr 2012)
+
+  02 Apr 2012; Martin Väth <martin@mvath.de>
+  New ebuild.
